edited conway interface

--- a/conway/conway.html
+++ b/conway/conway.html
@@ -9,7 +9,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: #0f172a;
+            background-color: #000000;
             /* Slate 900 */
             color: #e2e8f0;
             overflow: hidden;
@@ -317,10 +317,11 @@
         // Color Palettes (Hue values)
         const themes = [
             0,   // White/Gray (Default)
-            200, // Sky Blue
+            230, // Sky Blue
             150, // Green (Matrix)
             280, // Purple (Synthwave)
-            340, // Pink
+            320, // Pink
+            360, // Red
             40   // Gold
         ];
         let currentThemeIndex = 0;
